improve mollbott docker compose
